style.css
:root {
    --background-color: #f8e88a;
    --background-color-gradient: linear-gradient(to top right, #edd157, #f8e88a);
    --sheet-background-color: #fefdfa;
    --sheet-background-color-gradient: linear-gradient(to bottom right, #fefdfa, #f4f3ec);
    --primary-color: #737944;
    --secondary-color: #d3cec0;
    --add-button-color: #f5e56f;
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

html {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 16pt;
}

body {
    width: 100%;
    min-height: 100vh;
    background-color: var(--background-color);
    background-image: var(--background-color-gradient);

    display: flex;
    justify-content: center;
    align-items: center;
}

#todo-app-container {
    min-width: 500px;
    min-height: 700px;
    background-color: var(--sheet-background-color);
    background-image: var(--sheet-background-color-gradient);
    box-shadow: 10px 10px 20px rgb(0, 0, 0, 0.2);
    border-radius: 2px;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: relative;
}

#nav-bar {
    width: 100%;
    min-height: 80px;
    padding: 0 15px;

    display: flex;
    justify-content: space-evenly;
    align-items: center;
    position: absolute;
    top: 10px;
}

#nav-bar img {
    cursor: pointer;
}

#nav-bar img:hover {
    opacity: 0.7;
}

#menu-icon {
    width: 50px;
    height: 50px;
}

#blank-container {
    flex-grow: 2;
}

#icon-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-grow: 1;
    gap: 10px;
}

.nav-icons {
    width: 30px;
    height: 30px;
}

.icon-dropdowns {
    position: relative;
    display: inline-block;
}

.dropdown-content {
    display: none;
    position: absolute;
    min-width: 160px;
    min-height: 50px;

    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    background-color: var(--sheet-background-color);
}

.icon-dropdowns:hover .dropdown-content{
    display: block;
}

.palette-options {
    min-width: 160px;
    min-height: 50px;

    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

.palette-color-buttons {
    width: 30px;
    height: 30px;
    border: 0;
    border-radius: 50%;
    cursor: pointer;
}

.palette-color-buttons:hover {
    opacity: 0.8;
}

#yellow-color-button {
    background-color: #edd157;
}

.yellow-color {
    --background-color: #f8e88a;
    --background-color-gradient: linear-gradient(to top right, #edd157, #f8e88a);
    --sheet-background-color: #fefdfa;
    --sheet-background-color-gradient: linear-gradient(to bottom right, #fefdfa, #f4f3ec);
    --primary-color: #737944;
    --secondary-color: #d3cec0;
    --add-button-color: #f5e56f;
}

#blue-color-button {
    background-color: #3366ff;
}

.blue-color {
    --background-color: #809fff;
    --background-color-gradient: linear-gradient(to top right, #3366ff, #809fff);
    --sheet-background-color: #e6ecff;
    --sheet-background-color-gradient: linear-gradient(to bottom right, #e6ecff, #ccd9ff);
    --primary-color: #737944;
    --secondary-color: #d3cec0;
    --add-button-color: #3366ff;
}

#green-color-button {
    background-color: #00cc66;
}

.green-color {
    --background-color: #80ffbf;
    --background-color-gradient: linear-gradient(to top right, #33ff99, #80ffbf);
    --sheet-background-color: #fefdfa;
    --sheet-background-color-gradient: linear-gradient(to bottom right, #e6fff2, #ccffe6);
    --primary-color: #737944;
    --secondary-color: #d3cec0;
    --add-button-color: #00cc66;
}

#clear-all-button {
    background-color: transparent;
    border: 0;
    color: var(--primary-color);
    font-weight: 700;

    min-width: 160px;
    min-height: 50px;
    cursor: pointer;
}

#clear-all-button:hover {
    background-color: rgba(0,0,0,0.2);
}

#todo-sheet {
    width: 100%;
    min-height: 490px;
    padding: 0 30px;
    color: var(--primary-color);

    display: flex;
    flex-direction: column;
    position: absolute;
    top: 90px;
}

.todo-title {
    font-weight: 400;
}

.todo-body {
    flex-grow: 1;
}

.task-container {
    max-height: 370px;
    overflow-y: scroll;
}

[type="checkbox"] {
    opacity: 0;
    position: absolute;
}

.tasks label {
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: relative;
    padding: 10px 0 10px 0;
    cursor: pointer;
}

.tasks label::after {
    content: "";
    height: 2px;
    
    position: absolute;
    right: 0;
    left: 0;
    bottom: 0;
    
    background-color: var(--secondary-color);
    opacity: 0.4;
}

.task-text {
    min-width: 350px;
    margin-right: 30px;
    word-wrap: break-word;
}

[type="checkbox"] + label > .task-text {
    position: relative;
}

[type="checkbox"]:checked + label > .task-text {
    opacity: 0.5;
}

[type="checkbox"]:checked + label > .task-text::after {
    content: "";
    height: 2px;
    background-color: var(--primary-color);
    
    position: absolute;
    right: 0;
    left: 0;
    top: 50%;
}

.custom-checkbox {
    --size: 25px;
    display: inline-block;
    width: var(--size);
    height: var(--size);

    border: 2px solid var(--secondary-color);
    border-radius: 2px;
    flex-shrink: 0;
}

.tasks:hover .custom-checkbox, 
[type="checkbox"]:focus + label .custom-checkbox {
    border-color: var(--primary-color);
}

[type="checkbox"]:checked + label .custom-checkbox {
    background-color: var(--secondary-color);
}

.check-mark {
    --size: 20px;
    width: var(--size);
    height: var(--size);
    display: none;
}

[type="checkbox"]:checked + label .custom-checkbox > .check-mark{
    display: block;
}

.new-input {
    width: 100%;
    padding: 10px 0 10px 0;
    background: transparent;

    border: none;
    border-bottom: 2px solid var(--secondary-color);
    outline: none;
    transition: border-bottom 150ms ease-in;
}

.new-input::placeholder {
    color: var(--secondary-color);
}

.new-input:focus {
    border-bottom-width: 3px;
}

.new-input:focus::placeholder {
    opacity: 0.5;
}

#sheet-actions {
    width: 100%;
    height: 120px;
    color: var(--primary-color);
    
    padding: 0 30px 40px;
    position: absolute;
    bottom: 0;
}

.todo-actions {
    display: flex;
    justify-content: space-between;
    align-items: end;
}

.todo-actions p {
    font-style: italic;
}

.todo-actions button {
    --size: 80px;
    width: var(--size);
    height: var(--size);

    background-color: var(--add-button-color);
    color: white;
    font-size: 40pt;
    cursor: pointer;

    border: 0;
    border-radius: 50%;
    box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.2);
}

.todo-actions button:hover {
    opacity: 0.7;
}

